--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<app-header></app-header>
+<section class="container">
+    <app-header></app-header>
+    <app-todo-list></app-todo-list>
+</section>
